matrix-ton/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: matrix
  namespace: matrix
spec:
  hosts:
    - matrix.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /.well-known/matrix
      route:
        - destination:
            host: wellknown
            port:
              number: 80
    - match:
        - uri:
            prefix: /_matrix/
        - uri:
            prefix: /_synapse/
      route:
        - destination:
            host: synapse
            port:
              number: 8008
    - route:
        - destination:
            host: element
            port:
              number: 80
